--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>the trimers salon Beauty Category Flat Bootstrap Responsive Web Template | Home :: w3layouts</title>
+<title> Beauty  | Home :: the trimers salon </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="the trimers salon Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
